--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<h1>
-  {{title}}
-</h1>
+<div>
+	<input class="search-input" type="text" placeholder="search.." [(ngModel)]="query" (keyup)="searchByName(query)" />
+	<table>
+	    <tr class="header-row">
+	        <td>Name</td>
+	        <td (click)="sortByJoiningDate()">Joining Date</td>
+	        <td>Age</td>
+	    </tr>
+	    <tr class="body-row" *ngFor="let data of tableData">
+	  	    <td>{{data.name}}</td>
+	  	    <td>{{data.joiningDate}}</td>
+	  	    <td>{{data.age}}</td>
+	    </tr>
+	</table>
+</div>
